# mail-promo-cleaner

./: .gitignore  README.md  cleaner.py  consultant.py  pyproject.toml
providers/: gmail.py
